@@ -637,9 +637,14 @@ This option can be used with <TT>ejabberd_service</TT> only. It is
 used to disable control on the from field on packets send by an
 external components. The option can be either <TT>true</TT> or
 <TT>false</TT>. The default value is <TT>true</TT> which conforms to <A HREF="http://www.xmpp.org/extensions/xep-0114.html">XEP-0114</A>.
-</DD><DT CLASS="dt-description"><B><TT>{hosts, [Hostnames], [HostOptions]}</TT></B></DT><DD CLASS="dd-description"> This option
-defines one or more hostnames of connected services and enables you to
-specify additional options including <TT>{password, Secret}</TT>.
+</DD><DT CLASS="dt-description"><B><TT>{hosts, [Hostnames], [HostOptions]}</TT></B></DT><DD CLASS="dd-description"> 
+This option of <TT>ejabberd_service</TT> allows to define one or more hostnames 
+of external Jabber components that provide a service.
+In <TT>HostOptions</TT> it is possible to define the password required to those components
+when attempt to connect to ejabberd: <TT>{password, Secret}</TT>.
+Note that you cannot define in a single <TT>ejabberd_service</TT> components of
+different services: add an <TT>ejabberd_service</TT> for each service,
+as seen in an example below.
 </DD><DT CLASS="dt-description"><B><TT>http_bind</TT></B></DT><DD CLASS="dd-description"> 
 This option enables HTTP Binding (<A HREF="http://www.xmpp.org/extensions/xep-0124.html">XEP-0124</A> and <A HREF="http://www.xmpp.org/extensions/xep-0206.html">XEP-0206</A>) support. HTTP Bind
 enables access via HTTP requests to <TT>ejabberd</TT> from behind firewalls which
@@ -818,19 +823,19 @@ connected to port 5237 with password &#X2018;<TT>ggsecret</TT>&#X2019;.
                             ssl, {certfile, "/path/to/ssl.pem"}]},
   {5269, ejabberd_s2s_in,  []},
   {5280, ejabberd_http,    [http_poll, web_admin]},
-  {5233, ejabberd_service, [{host, "aim.example.org",
+  {5233, ejabberd_service, [{hosts, ["aim.example.org"],
                              [{password, "aimsecret"}]}]},
   {5234, ejabberd_service, [{hosts, ["icq.example.org", "sms.example.org"],
                              [{password, "jitsecret"}]}]},
-  {5235, ejabberd_service, [{host, "msn.example.org",
+  {5235, ejabberd_service, [{hosts, ["msn.example.org"],
                              [{password, "msnsecret"}]}]},
-  {5236, ejabberd_service, [{host, "yahoo.example.org",
+  {5236, ejabberd_service, [{hosts, ["yahoo.example.org"],
                              [{password, "yahoosecret"}]}]},
-  {5237, ejabberd_service, [{host, "gg.example.org",
+  {5237, ejabberd_service, [{hosts, ["gg.example.org"],
                              [{password, "ggsecret"}]}]},
-  {5238, ejabberd_service, [{host, "jmc.example.org",
+  {5238, ejabberd_service, [{hosts, ["jmc.example.org"],
                              [{password, "jmcsecret"}]}]},
-  {5239, ejabberd_service, [{host, "custom.example.org",
+  {5239, ejabberd_service, [{hosts, ["custom.example.org"],
                              [{password, "customsecret"}]},
                             {service_check_from, false}]}
  ]
